# 3BigData

./: .gitignore  MLP_code_commente.ipynb  Note_pres.md  README.md  requirements.txt  singlelayer_perceptron
.github/workflows/: ci.yml
Documentation/: .gitignore  .gitlab-ci.yml  README.md  README_temp.md  install-requirements.sh  mix.exs
Documentation/md/: documentation.md
datasets/celsius_fahrenheit/: datasets.csv  datasets.json
documentation/: .gitignore  .gitlab-ci.yml  README.md  install-requirements.sh  mix.exs
documentation/md/: documentation.md
flask-app/: app.py  import_lib.py  requirements.txt
flask-app/models/: best_metal_vs_other.json  best_paper_vs_other.json  best_plastic_vs_other.json
flask-app/templates/: index.html  test_cases.html
interoperability/: Hello_MNIST.py  Notebook colab présentant les cas de tests.ipynb  keras.py  main.py  main.rs  rbf_training.py  test_cases.ipynb
interoperability/python_interlop/: charbel.json  hugging_face.py  (+9 more)
logs/: events.out.tfevents.1720090487.adam.18272.0  events.out.tfevents.1720119518.adam.11095.0  events.out.tfevents.1720119793.adam.11942.0  events.out.tfevents.1720119956.adam.12449.0  events.out.tfevents.1720123548.adam.9050.0  events.out.tfevents.1720125185.adam.10917.0  events.out.tfevents.1720125361.adam.11271.0  events.out.tfevents.1720125402.adam.11368.0  events.out.tfevents.1720125564.adam.11528.0  events.out.tfevents.1720125754.adam.11899.0  events.out.tfevents.1720125767.adam.12121.0  events.out.tfevents.1720125901.adam.12427.0  events.out.tfevents.1720125931.adam.12666.0  events.out.tfevents.1720127752.adam.16008.0  events.out.tfevents.1720127834.adam.16575.0  events.out.tfevents.1720132487.adam.25243.0  events.out.tfevents.1720132540.adam.25542.0  events.out.tfevents.1720132799.adam.26412.0  events.out.tfevents.1720133065.adam.26928.0  events.out.tfevents.1720133144.adam.27208.0  events.out.tfevents.1720133219.adam.27498.0  events.out.tfevents.1720133242.adam.27742.0  events.out.tfevents.1720133259.adam.27969.0  events.out.tfevents.1720133311.adam.28218.0  events.out.tfevents.1720133341.adam.28459.0  events.out.tfevents.1720133386.adam.28711.0  events.out.tfevents.1720133442.adam.28974.0  events.out.tfevents.1720133840.adam.30433.0  events.out.tfevents.1720134158.adam.30975.0  events.out.tfevents.1720134298.adam.31140.0  events.out.tfevents.1720134461.adam.31313.0  events.out.tfevents.1720134479.adam.31559.0  events.out.tfevents.1720198350.adam.11210.0  events.out.tfevents.1720571604.adam.6368.0  events.out.tfevents.1720571944.adam.6444.0  events.out.tfevents.1720571960.adam.6705.0  events.out.tfevents.1720630055.adam.66517.0  events.out.tfevents.1720634343.adam.71385.0  events.out.tfevents.1720634420.adam.71654.0  events.out.tfevents.1720634512.adam.71741.0  (+1 more)
models/: rbf_train.json
mylib/: Cargo.toml  Makefile  README.md  model.json  singlelayer_perceptron
mylib/benches/: linearModel.rs  multilayer_perceptron.rs  radical_basis_function_network.rs  support_vecteur_machine.rs
mylib/examples/: linearModel.rs  linear_model.rs  multilayer_perceptron.rs  radical_basis_function_network.rs  support_vecteur_machine.rs
mylib/examples/linear_model/classification/: linear_simple.rs
mylib/examples/liner_model/: celsius_to_fahrenheit.rs  home_price.rs  loads_celsius_to_fahrenheit.rs  train_celsius_to_fahrenheit.rs
mylib/examples/ml/classification/: _multi_linear_3_classes .rs  cros.rs  cross.rs  linear_multiple.rs  linear_simple.rs  multi_linear_3_classes.rs  xor.rs
mylib/examples/ml/regression/: cros.rs  linear_multiple.rs  linear_simple.rs  linear_simple_2D.rs  linear_simple_3D.rs  linear_tricky_3D.rs  non_linear_simple_2D.rs  non_linear_simple_3D.rs  xor.rs
mylib/examples/multilayer_perceptron/classification/: cross.rs  linear_multiple.rs  linear_simple.rs  multi_cross.rs  multi_linear_3_classes.rs  xor.rs
mylib/examples/multilayer_perceptron/regression/: linear_simple_2D.rs  linear_simple_3D.rs  linear_tricky_3D.rs  no_linear_simple_3d.rs  non_linear_simple_3D.rs
mylib/examples/pmc/classification/: cros.rs  cross.rs  linear_multiple.rs  linear_simple.rs  multi_cross.rs  multi_linear_3_classes.rs  xor.rs
mylib/examples/pmc/regression/: linear_simple_2D.rs  linear_simple_3D.rs  linear_tricky_3D.rs  non_linear_simple_2D.rs  non_linear_simple_3D.rs
mylib/examples/radial_basis_function/classification/: cross.rs  linear_multiple.rs  linear_simple.rs  multi_cross.rs  multi_linear_3_classes.rs  xor.rs
mylib/examples/radial_basis_function/regression/: linear_simple_2D.rs  linear_simple_3D.rs  linear_tricky_3D.rs  non_linear_simple_2D.rs  non_linear_simple_3D.rs
mylib/examples/rbf/classification/: cros.rs  cross.rs  linear_multiple.rs  linear_simple.rs  multi_cross.rs  multi_linear_3_classes.rs  xor.rs
mylib/examples/rbf/regression/: linear_simple_2D.rs  linear_simple_3D.rs  linear_tricky_3D.rs  non_linear_simple_2D.rs  non_linear_simple_3D.rs
mylib/examples/support_vector_machine/: support_vecteur_machine.rs
mylib/examples/svc/: linear_simple.rs
mylib/examples/training/: linear_model_training.rs  mlp_training.rs  rbf_training.rs
mylib/examples/training_with_datasets/: create_ml_dataset.rs  train_linear_model.rs  train_multilayer_perceptron.rs  train_rbf.rs  train_svm.rs
mylib/include/: mlp_model.h
mylib/logdir/: events.out.tfevents.1719966012.adam.50504.0  events.out.tfevents.1720198303.adam.11115.0
mylib/models training/: rbf_training.rs
mylib/src/: lib.rs  linear_model.rs  load_dataset.rs  multilayer_perceptron.rs  radial_basis_function_network.rs  radical_basis_function_network.rs  support_vector_machine.rs
mylib/src/linear_model/: mod.rs
mylib/src/multilayer_perceptron/: mod.rs  singlelayer_perceptron.rs
mylib/src/radial_basis_function_network/: mod.rs
mylib/src/support_vector_machine/: mod.rs
mylib/src/tests/: mod.rs
mylib/src/utils/: data_hundling.rs  mod.rs  model.rs  read_file.rs
mylib/tests/: linear_model.rs  mylib.json  test.json  test.rs  test_linear_model.json
web-app/: .env  .env.example  composer.json  package-lock.json  packages.txt
(+199 files in other folders)
