[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
nalgebra = "0.32.5"
libm = "0.2.8"
itertools = "0.13.0"
ndarray = { version="0.15.3" }
ndarray-rand = "0.14.0"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }

# <-------------------------------------------------- lp ----------------------------------------------------->
# classification
[[example]]
name="ml_classification_cros"
path="examples/ml/classification/cros.rs"
[[example]]
name="ml_classification_linear_simple"
path="examples/ml/classification/linear_simple.rs"
[[example]]
name="ml_classification_linear_multiple"
path="examples/ml/classification/linear_multiple.rs"
[[example]]
name="ml_classification_xor"
path="examples/ml/classification/xor.rs"

# resgression
[[example]]
name="ml_resgression_linear_simple_2D"
path="examples/ml/regression/linear_simple_2D.rs"
[[example]]
name="ml_resgression_linear_simple_3D"
path="examples/ml/regression/linear_simple_3D.rs"
[[example]]
name="ml_resgression_linear_tricky_3D"
path="examples/ml/regression/linear_tricky_3D.rs"
[[example]]
name="ml_resgression_non_linear_simple_2D"
path="examples/ml/regression/non_linear_simple_2D.rs"
[[example]]
name="ml_resgression_non_linear_simple_3D"
path="examples/ml/regression/non_linear_simple_3D.rs"

# <-------------------------------------------------- pmc ----------------------------------------------------->
# classification
[[example]]
name="mlp_classification_cros"
path="examples/pmc/classification/cros.rs"
[[example]]
name="mlp_classification_linear_simple"
path="examples/pmc/classification/linear_simple.rs"
[[example]]
name="mlp_classification_linear_multiple"
path="examples/pmc/classification/linear_multiple.rs"
[[example]]
name="mlp_classification_xor"
path="examples/pmc/classification/xor.rs"

# resgression
[[example]]
name="mlp_resgression_linear_simple_2D"
path="examples/pmc/regression/linear_simple_2D.rs"
[[example]]
name="mlp_resgression_linear_simple_3D"
path="examples/pmc/regression/linear_simple_3D.rs"
[[example]]
name="mlp_resgression_linear_tricky_3D"
path="examples/pmc/regression/linear_tricky_3D.rs"
[[example]]
name="mlp_resgression_non_linear_simple_2D"
path="examples/pmc/regression/non_linear_simple_2D.rs"
[[example]]
name="mlp_resgression_non_linear_simple_3D"
path="examples/pmc/regression/non_linear_simple_3D.rs"
