[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
nalgebra = "0.33.0"
libm = "0.2.8"
itertools = "0.13.0"
ndarray = { version="0.15.3" }
ndarray-rand = "0.14.0"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
osqp = "0.6.2"
tensorboard-rs = "0.5.9"
pbr = "1.1.1"

# <-------------------------------------------------- lp ----------------------------------------------------->
# classification
[[example]]
name="ml_classification_cross"
path="examples/ml/classification/cross.rs"
[[example]]
name="ml_classification_linear_simple"
path="examples/ml/classification/linear_simple.rs"
[[example]]
name="ml_classification_linear_multiple"
path="examples/ml/classification/linear_multiple.rs"
[[example]]
name="ml_classification_xor"
path="examples/ml/classification/xor.rs"

# regression
[[example]]
name="ml_regression_linear_simple_2D"
path="examples/ml/regression/linear_simple_2D.rs"
[[example]]
name="ml_regression_linear_simple_3D"
path="examples/ml/regression/linear_simple_3D.rs"
[[example]]
name="ml_regression_linear_tricky_3D"
path="examples/ml/regression/linear_tricky_3D.rs"
[[example]]
name="ml_regression_non_linear_simple_2D"
path="examples/ml/regression/non_linear_simple_2D.rs"
[[example]]
name="ml_regression_non_linear_simple_3D"
path="examples/ml/regression/non_linear_simple_3D.rs"

# <-------------------------------------------------- pmc ----------------------------------------------------->
# classification
[[example]]
name="mlp_classification_cross"
path="examples/pmc/classification/cross.rs"
[[example]]
name="mlp_classification_linear_simple"
path="examples/pmc/classification/linear_simple.rs"
[[example]]
name="mlp_classification_linear_multiple"
path="examples/pmc/classification/linear_multiple.rs"
[[example]]
name="mlp_classification_xor"
path="examples/pmc/classification/xor.rs"

# resgression
[[example]]
name="mlp_resgression_linear_simple_2D"
path="examples/pmc/regression/linear_simple_2D.rs"
[[example]]
name="mlp_regression_linear_simple_3D"
path="examples/pmc/regression/linear_simple_3D.rs"
[[example]]
name="mlp_regression_linear_tricky_3D"
path="examples/pmc/regression/linear_tricky_3D.rs"
[[example]]
name="mlp_regression_non_linear_simple_2D"
path="examples/pmc/regression/non_linear_simple_2D.rs"
[[example]]
name="mlp_regression_non_linear_simple_3D"
path="examples/pmc/regression/non_linear_simple_3D.rs"

# <-------------------------------------------------- rbf ----------------------------------------------------->
# classification
[[example]]
name="rbf_classification_linear_simple"
path="examples/rbf/classification/linear_simple.rs"
[[example]]
name="rbf_classification_linear_multiple"
path="examples/rbf/classification/linear_multiple.rs"
[[example]]
name="rbf_classification_cross"
path="examples/rbf/classification/cross.rs"
[[example]]
name="rbf_classification_multi_cross"
path="examples/rbf/classification/multi_cross.rs"
[[example]]
name="rbf_classification_xor"
path="examples/rbf/classification/xor.rs"

# resgression
[[example]]
name="rbf_regression_linear_simple_2D"
path="examples/rbf/regression/linear_simple_2D.rs"
[[example]]
name="rbf_regression_linear_simple_3D"
path="examples/rbf/regression/linear_simple_3D.rs"
[[example]]
name="rbf_regression_linear_tricky_3D"
path="examples/rbf/regression/linear_tricky_3D.rs"
[[example]]
name="rbf_regression_non_linear_simple_2D"
path="examples/rbf/regression/non_linear_simple_2D.rs"
[[example]]
name="rbf_regression_non_linear_simple_3D"
path="examples/rbf/regression/non_linear_simple_3D.rs"

# <-------------------------------------------------- svm ----------------------------------------------------->
# classification
[[example]]
name="test"
path="src/support_vector_machine.rs"