[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
nalgebra = "0.33.0"
libm = "0.2.8"
itertools = "0.13.0"
ndarray = { version="0.15.3" }
ndarray-rand = "0.14.0"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
osqp = "0.6.2"
tensorboard-rs = "0.5.9"
pbr = "1.1.1"
image = "0.25.1"
bincode = "1.3.3"
zstd = "0.13.2"

# <-------------------------------------------------- lm ----------------------------------------------------->
# classification

[[example]]
name = "lm_classification_cross"
path = "examples/linear_model/classification/cross.rs"

[[example]]
name = "lm_classification_linear_simple"
path = "examples/linear_model/classification/linear_simple.rs"

[[example]]
name = "lm_classification_linear_multiple"
path = "examples/linear_model/classification/linear_multiple.rs"

[[example]]
name = "lm_classification_xor"
path = "examples/linear_model/classification/xor.rs"

# regression
[[example]]
name = "lm_regression_linear_simple_2D"
path = "examples/linear_model/regression/linear_simple_2D.rs"

[[example]]
name = "lm_regression_linear_simple_3D"
path = "examples/linear_model/regression/linear_simple_3D.rs"

[[example]]
name = "lm_regression_linear_tricky_3D"
path = "examples/linear_model/regression/linear_tricky_3D.rs"

[[example]]
name = "lm_regression_non_linear_simple_2D"
path = "examples/linear_model/regression/non_linear_simple_2D.rs"

[[example]]
name = "lm_regression_non_linear_simple_3D"
path = "examples/linear_model/regression/non_linear_simple_3D.rs"

# <-------------------------------------------------- mlp ----------------------------------------------------->
# classification

[[example]]
name = "mlp_classification_cross"
path = "examples/multilayer_perceptron/classification/cross.rs"

[[example]]
name = "mlp_classification_multi_cross"
path = "examples/multilayer_perceptron/classification/multi_cross.rs"

[[example]]
name = "mlp_classification_linear_multiple"
path = "examples/multilayer_perceptron/classification/linear_multiple.rs"

[[example]]
name = "mlp_classification_linear_simple"
path = "examples/multilayer_perceptron/classification/linear_simple.rs"

[[example]]
name = "mlp_classification_multi_linear_3_classes"
path = "examples/multilayer_perceptron/classification/multi_linear_3_classes.rs"

[[example]]
name = "mlp_classification_xor"
path = "examples/multilayer_perceptron/classification/xor.rs"

# regression
[[example]]
name = "mlp_regression_linear_simple_2D"
path = "examples/multilayer_perceptron/regression/linear_simple_2D.rs"

[[example]]
name = "mlp_regression_linear_simple_3D"
path = "examples/multilayer_perceptron/regression/linear_simple_3D.rs"

[[example]]
name = "mlp_regression_linear_tricky_3D"
path = "examples/multilayer_perceptron/regression/linear_tricky_3D.rs"

[[example]]
name = "mlp_regression_non_linear_simple_2D"
path = "examples/multilayer_perceptron/regression/non_linear_simple_2D.rs"

[[example]]
name = "mlp_regression_non_linear_simple_3D"
path = "examples/multilayer_perceptron/regression/non_linear_simple_3D.rs"

# <-------------------------------------------------- rbf ----------------------------------------------------->
# classification

[[example]]
name = "rbf_classification_cross"
path = "examples/radial_basis_function/classification/cross.rs"

[[example]]
name = "rbf_classification_linear_multiple"
path = "examples/radial_basis_function/classification/linear_multiple.rs"

[[example]]
name = "rbf_classification_linear_simple"
path = "examples/radial_basis_function/classification/linear_simple.rs"

[[example]]
name = "rbf_classification_multi_cross"
path = "examples/radial_basis_function/classification/multi_cross.rs"

[[example]]
name = "rbf_classification_xor"
path = "examples/radial_basis_function/classification/xor.rs"

[[example]]
name = "rbf_classification_multi_linear_3_classes"
path = "examples/radial_basis_function/classification/multi_linear_3_classes.rs"

# regression
[[example]]
name = "rbf_regression_linear_simple_2D"
path = "examples/radial_basis_function/regression/linear_simple_2D.rs"

[[example]]
name = "rbf_regression_linear_simple_3D"
path = "examples/radial_basis_function/regression/linear_simple_3D.rs"

[[example]]
name = "rbf_regression_linear_tricky_3D"
path = "examples/radial_basis_function/regression/linear_tricky_3D.rs"

[[example]]
name = "rbf_regression_non_linear_simple_2D"
path = "examples/radial_basis_function/regression/non_linear_simple_2D.rs"

[[example]]
name = "rbf_regression_non_linear_simple_3D"
path = "examples/radial_basis_function/regression/non_linear_simple_3D.rs"

# <-------------------------------------------------- svm ----------------------------------------------------->
# classification

#[[example]]
#name = "svm_classification_cross"
#path = "examples/support_vector_machine/classification/cross.rs"

[[example]]
name = "svm_classification_linear_simple"
path = "examples/support_vector_machine/classification/linear_simple.rs"

[[example]]
name = "svm_classification_linear_multiple"
path = "examples/support_vector_machine/classification/linear_multiple.rs"

[[example]]
name = "svm_classification_multi_cross"
path = "examples/support_vector_machine/classification/multi_cross.rs"

[[example]]
name = "svm_classification_multi_linear_3_classes"
path = "examples/support_vector_machine/classification/multi_linear_3_classes.rs"

[[example]]
name = "svm_classification_xor"
path = "examples/support_vector_machine/classification/xor.rs"

# <-------------------------------------------------- model training ----------------------------------------------------->
# train with datasets

[[example]]
name = "train_multilayer_perceptron"
path = "examples/training_with_datasets/train_multilayer_perceptron.rs"

[[example]]
name = "train_linear_model"
path = "examples/training_with_datasets/train_linear_model.rs"

[[example]]
name = "train_rbf"
path = "examples/training_with_datasets/train_rbf.rs"

[[example]]
name = "train_svm"
path = "examples/training_with_datasets/train_svm.rs"

[[example]]
name = "create_ml_dataset"
path = "examples/training_with_datasets/create_ml_dataset.rs"

# <-------------------------------------------------- svc ----------------------------------------------------->
[[example]]
name="svc_linear_simple"
path="examples/svc/linear_simple.rs"

